5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1712_2505.log
== SUBMITION (2019-05-13 23:49:26) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Repeticoes: "))
a = 0
i = 0
sinal = sinal + x
while (i < k):
	a = a + sinal ** (2*i+1)/factorial(2*i+1)
	sinal = - sinal
	i = i + 1
print(round(a, 10))
-- EXECUTION TIME:
0.172144
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2505/main.py", line 6, in <module>
    sinal = sinal + x
NameError: name 'sinal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:49:31) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Repeticoes: "))
a = 0
i = 0
sinal = sinal + x
while (i < k):
	a = a + sinal ** (2*i+1)/factorial(2*i+1)
	sinal = - sinal
	i = i + 1
print(round(a, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = sinal + x
NameError: name 'sinal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:50:10) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Repeticoes: "))
a = 0
i = 0
sinal = x
while (i < k):
	a = a + sinal ** (2*i+1)/factorial(2*i+1)
	sinal = - sinal
	i = i + 1
print(round(a, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:50:20) 
-- CODE:
from math import *
x = eval(input("Angulo: "))
k = int(input("Repeticoes: "))
a = 0
i = 0
sinal = x
while (i < k):
	a = a + sinal ** (2*i+1)/factorial(2*i+1)
	sinal = - sinal
	i = i + 1
print(round(a, 10))
-- EXECUTION TIME:
0.141058
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
